crates/celox/tests/snapshots/basic__hash_consing_sir.snap
---
source: crates/celox/tests/basic.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
    r0: logic<32>
    r1: logic<32>
    r2: logic<32>
    r3: logic<32>
  b0:
    r0 = Load(addr=a (region=0), offset=0, bits=32)
    r1 = Load(addr=b (region=0), offset=0, bits=32)
    r2 = r0 Add r1
    r3 = r2 Add r2
    Store(addr=x (region=0), offset=0, bits=32, src_reg = 3)
    Return
