crates/celox/tests/snapshots/basic__mux_safe_hoisting_sir.snap
---
source: crates/celox/tests/basic.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
    r0: logic<1>
    r1: logic<1>
    r2: bit<1>
    r3: logic<32>
    r4: logic<32>
    r5: logic<32>
    r6: logic<32>
    r7: bit<32>
    r8: logic<32>
    r10: logic<32>
    r11: bit<32>
    r12: logic<32>
  b0:
    r0 = Load(addr=c (region=0), offset=0, bits=1)
    r3 = Load(addr=a (region=0), offset=0, bits=32)
    r4 = Load(addr=b (region=0), offset=0, bits=32)
    r2 = ToTwoState r0
    r5 = Mux(cond=r2, then=r3, else=r4)
    Store(addr=m (region=0), offset=0, bits=32, src_reg = 5)
    r7 = SIRValue(0x1)
    r8 = r5 Add r7
    r10 = r8 And r7
    Store(addr=x (region=0), offset=0, bits=32, src_reg = 10)
    r11 = SIRValue(0x2)
    r12 = r8 Or r11
    Store(addr=y (region=0), offset=0, bits=32, src_reg = 12)
    Return
